# intro-to-singletons

./: CHANGELOG.md  Makefile  README.md  intro-to-singletons.cabal
src/: PostSingletons.hs  PreSingletons.hs
src/Part1/: PostSingletons.hs  PreSingletons.hs
