cabal-version:      2.4
name:               intro-to-singletons
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jack Hodgkinson
maintainer:         jdahodgkinson@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Part1.PostSingletons
    Part1.PreSingletons

  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  default-extensions:
    DataKinds
    GADTs
    KindSignatures
    LambdaCase
    RankNTypes
    TemplateHaskell
    TypeApplications
    TypeFamilies

  build-depends:
    , base
    , singletons  ^>=2.6

  hs-source-dirs:     src
  default-language:   Haskell2010
